--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         networks:
             - clarusnet
     app:
-        image: 046402772087.dkr.ecr.us-east-1.amazonaws.com/serdarcw/myhandson/serdarcw/jenkins-hands-on:latest
+        image: 046402772087.dkr.ecr.us-east-1.amazonaws.com/serdarcw:latest
         restart: always
         environment:
             MYSQL_DATABASE_HOST: database
